[package]
name = "flit"
version = "0.1.0"
authors = ["Tarun Verghis <tarun.verghis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Bloom filter backed by xxHash"
repository = "https://github.com/tverghis/flit"
keywords = ["bloom", "filter", "bloomfilter"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
bitvec = "0.10"
twox-hash = "1.1"
